--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "autoprefixer": "^10.2.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
@@ -21,12 +22,15 @@
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^8.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "postcss": "^8.2.10",
     "react-hot-loader": "^4.13.0",
+    "tailwindcss": "^2.1.1",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
